// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker Cascader Picker 1`] = `
<Picker
  cancelText="取消"
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "11",
          },
          Object {
            "label": "选项二",
            "value": "12",
          },
        ],
        "label": "选项一",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "选项一",
            "value": "21",
          },
          Object {
            "label": "选项二",
            "value": "22",
          },
        ],
        "label": "选项一",
        "value": "2",
      },
    ]
  }
  disabled={false}
  displayAddon=""
  displayMember="label"
  okText="确定"
  onCancel={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onMaskClick={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  valueMember="value"
  visible={false}
>
  <div
    className="za-picker"
    onClick={[Function]}
  >
    <div
      className="za-picker-input za-picker-placeholder"
    >
      <input
        type="hidden"
        value={Array []}
      />
      请选择
    </div>
    <div
      className="za-picker-container"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        className="za-popup-inner"
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-inner za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  请选择
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <Cascader
                    cols={undefined}
                    data={
                      Array [
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "11",
                            },
                            Object {
                              "label": "选项二",
                              "value": "12",
                            },
                          ],
                          "label": "选项一",
                          "value": "1",
                        },
                        Object {
                          "children": Array [
                            Object {
                              "label": "选项一",
                              "value": "21",
                            },
                            Object {
                              "label": "选项二",
                              "value": "22",
                            },
                          ],
                          "label": "选项一",
                          "value": "2",
                        },
                      ]
                    }
                    disabled={false}
                    displayMember="label"
                    onChange={[Function]}
                    prefixCls="za-picker"
                    value={Array []}
                    valueMember="value"
                  >
                    <ColumnGroup
                      className={undefined}
                      displayMember="label"
                      onValueChange={[Function]}
                      prefixCls="za-picker"
                      selectedValue={
                        Array [
                          "1",
                          "11",
                        ]
                      }
                      valueMember="value"
                    >
                      <div
                        className="za-picker-column-group"
                      >
                        <div
                          className="za-picker-column-group-item"
                          key="0"
                        >
                          <Column
                            displayMember="label"
                            indicatorStyle={undefined}
                            onValueChange={[Function]}
                            prefixCls="za-picker"
                            pure={true}
                            selectedValue="1"
                            valueMember="value"
                          >
                            <div
                              className="za-picker-cascader"
                            >
                              <div
                                className="za-picker-cascader-indicator"
                                style={undefined}
                              />
                              <div
                                className="za-picker-cascader-content"
                              >
                                <div
                                  className="za-picker-cascader-item za-picker-cascader-item-selected"
                                  key="1"
                                  style={undefined}
                                >
                                  选项一
                                </div>
                                <div
                                  className="za-picker-cascader-item"
                                  key="2"
                                  style={undefined}
                                >
                                  选项一
                                </div>
                              </div>
                            </div>
                          </Column>
                        </div>
                        <div
                          className="za-picker-column-group-item"
                          key="1"
                        >
                          <Column
                            displayMember="label"
                            indicatorStyle={undefined}
                            onValueChange={[Function]}
                            prefixCls="za-picker"
                            pure={true}
                            selectedValue="11"
                            valueMember="value"
                          >
                            <div
                              className="za-picker-cascader"
                            >
                              <div
                                className="za-picker-cascader-indicator"
                                style={undefined}
                              />
                              <div
                                className="za-picker-cascader-content"
                              >
                                <div
                                  className="za-picker-cascader-item za-picker-cascader-item-selected"
                                  key="11"
                                  style={undefined}
                                >
                                  选项一
                                </div>
                                <div
                                  className="za-picker-cascader-item"
                                  key="12"
                                  style={undefined}
                                >
                                  选项二
                                </div>
                              </div>
                            </div>
                          </Column>
                        </div>
                      </div>
                    </ColumnGroup>
                  </Cascader>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</Picker>
`;

exports[`Picker DatePicker 1`] = `
<DatePicker
  cancelText="取消"
  defaultValue=""
  disabled={false}
  displayMember="label"
  locale={
    Object {
      "day": "日",
      "hour": "时",
      "minute": "分",
      "month": "月",
      "year": "年",
    }
  }
  minuteStep={1}
  mode="date"
  okText="确定"
  onCancel={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onMaskClick={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  value=""
  valueMember="value"
  visible={false}
>
  <div
    className="za-picker"
    onClick={[Function]}
  >
    <div
      className="za-picker-input za-picker-placeholder"
    >
      <input
        type="hidden"
        value=""
      />
      请选择
    </div>
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  请选择
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <ColumnGroup
                    className={undefined}
                    disabled={false}
                    displayMember="label"
                    onValueChange={[Function]}
                    prefixCls="za-picker"
                    selectedValue={
                      Array [
                        "2000",
                        "0",
                        "1",
                      ]
                    }
                    valueMember="value"
                  >
                    <div
                      className="za-picker-column-group"
                    >
                      <div
                        className="za-picker-column-group-item"
                        key="year"
                      >
                        <Column
                          displayMember="label"
                          indicatorStyle={undefined}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          pure={true}
                          selectedValue="2000"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-cascader"
                          >
                            <div
                              className="za-picker-cascader-indicator"
                              style={undefined}
                            />
                            <div
                              className="za-picker-cascader-content"
                            >
                              <div
                                className="za-picker-cascader-item za-picker-cascader-item-selected"
                                key="2000"
                                style={undefined}
                              >
                                2000年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2001"
                                style={undefined}
                              >
                                2001年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2002"
                                style={undefined}
                              >
                                2002年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2003"
                                style={undefined}
                              >
                                2003年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2004"
                                style={undefined}
                              >
                                2004年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2005"
                                style={undefined}
                              >
                                2005年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2006"
                                style={undefined}
                              >
                                2006年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2007"
                                style={undefined}
                              >
                                2007年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2008"
                                style={undefined}
                              >
                                2008年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2009"
                                style={undefined}
                              >
                                2009年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2010"
                                style={undefined}
                              >
                                2010年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2011"
                                style={undefined}
                              >
                                2011年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2012"
                                style={undefined}
                              >
                                2012年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2013"
                                style={undefined}
                              >
                                2013年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2014"
                                style={undefined}
                              >
                                2014年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2015"
                                style={undefined}
                              >
                                2015年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2016"
                                style={undefined}
                              >
                                2016年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2017"
                                style={undefined}
                              >
                                2017年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2018"
                                style={undefined}
                              >
                                2018年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2019"
                                style={undefined}
                              >
                                2019年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2020"
                                style={undefined}
                              >
                                2020年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2021"
                                style={undefined}
                              >
                                2021年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2022"
                                style={undefined}
                              >
                                2022年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2023"
                                style={undefined}
                              >
                                2023年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2024"
                                style={undefined}
                              >
                                2024年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2025"
                                style={undefined}
                              >
                                2025年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2026"
                                style={undefined}
                              >
                                2026年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2027"
                                style={undefined}
                              >
                                2027年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2028"
                                style={undefined}
                              >
                                2028年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2029"
                                style={undefined}
                              >
                                2029年
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2030"
                                style={undefined}
                              >
                                2030年
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                        key="month"
                      >
                        <Column
                          displayMember="label"
                          indicatorStyle={undefined}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          pure={true}
                          selectedValue="0"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-cascader"
                          >
                            <div
                              className="za-picker-cascader-indicator"
                              style={undefined}
                            />
                            <div
                              className="za-picker-cascader-content"
                            >
                              <div
                                className="za-picker-cascader-item za-picker-cascader-item-selected"
                                key="0"
                                style={undefined}
                              >
                                1月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="1"
                                style={undefined}
                              >
                                2月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2"
                                style={undefined}
                              >
                                3月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="3"
                                style={undefined}
                              >
                                4月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="4"
                                style={undefined}
                              >
                                5月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="5"
                                style={undefined}
                              >
                                6月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="6"
                                style={undefined}
                              >
                                7月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="7"
                                style={undefined}
                              >
                                8月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="8"
                                style={undefined}
                              >
                                9月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="9"
                                style={undefined}
                              >
                                10月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="10"
                                style={undefined}
                              >
                                11月
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="11"
                                style={undefined}
                              >
                                12月
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                      <div
                        className="za-picker-column-group-item"
                        key="day"
                      >
                        <Column
                          displayMember="label"
                          indicatorStyle={undefined}
                          onValueChange={[Function]}
                          prefixCls="za-picker"
                          pure={true}
                          selectedValue="1"
                          valueMember="value"
                        >
                          <div
                            className="za-picker-cascader"
                          >
                            <div
                              className="za-picker-cascader-indicator"
                              style={undefined}
                            />
                            <div
                              className="za-picker-cascader-content"
                            >
                              <div
                                className="za-picker-cascader-item za-picker-cascader-item-selected"
                                key="1"
                                style={undefined}
                              >
                                1日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="2"
                                style={undefined}
                              >
                                2日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="3"
                                style={undefined}
                              >
                                3日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="4"
                                style={undefined}
                              >
                                4日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="5"
                                style={undefined}
                              >
                                5日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="6"
                                style={undefined}
                              >
                                6日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="7"
                                style={undefined}
                              >
                                7日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="8"
                                style={undefined}
                              >
                                8日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="9"
                                style={undefined}
                              >
                                9日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="10"
                                style={undefined}
                              >
                                10日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="11"
                                style={undefined}
                              >
                                11日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="12"
                                style={undefined}
                              >
                                12日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="13"
                                style={undefined}
                              >
                                13日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="14"
                                style={undefined}
                              >
                                14日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="15"
                                style={undefined}
                              >
                                15日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="16"
                                style={undefined}
                              >
                                16日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="17"
                                style={undefined}
                              >
                                17日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="18"
                                style={undefined}
                              >
                                18日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="19"
                                style={undefined}
                              >
                                19日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="20"
                                style={undefined}
                              >
                                20日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="21"
                                style={undefined}
                              >
                                21日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="22"
                                style={undefined}
                              >
                                22日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="23"
                                style={undefined}
                              >
                                23日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="24"
                                style={undefined}
                              >
                                24日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="25"
                                style={undefined}
                              >
                                25日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="26"
                                style={undefined}
                              >
                                26日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="27"
                                style={undefined}
                              >
                                27日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="28"
                                style={undefined}
                              >
                                28日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="29"
                                style={undefined}
                              >
                                29日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="30"
                                style={undefined}
                              >
                                30日
                              </div>
                              <div
                                className="za-picker-cascader-item"
                                key="31"
                                style={undefined}
                              >
                                31日
                              </div>
                            </div>
                          </div>
                        </Column>
                      </div>
                    </div>
                  </ColumnGroup>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</DatePicker>
`;

exports[`Picker Picker 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-input za-picker-placeholder"
  >
    <input
      type="hidden"
      value=""
    />
    请选择
  </div>
  <div
    class="za-picker-container"
  >
    <div
      class="za-popup za-popup-inner za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              请选择
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-column-group"
              >
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-cascader"
                  >
                    <div
                      class="za-picker-cascader-indicator"
                    />
                    <div
                      class="za-picker-cascader-content"
                    >
                      <div
                        class="za-picker-cascader-item za-picker-cascader-item-selected"
                      >
                        选项一
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        选项二
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Picker StackPicker 1`] = `
<PickerStack
  cols={Infinity}
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "label": "海淀区",
            "value": "11",
          },
          Object {
            "label": "西城区",
            "value": "12",
          },
        ],
        "label": "北京市",
        "value": "1",
      },
      Object {
        "children": Array [
          Object {
            "label": "黄埔区",
            "value": "21",
          },
          Object {
            "label": "虹口区",
            "value": "22",
          },
        ],
        "label": "上海市",
        "value": "2",
      },
    ]
  }
  disabled={false}
  displayItems={8}
  displayRender={[Function]}
  itemHeight={50}
  itemRender={[Function]}
  labelAddon=" > "
  onCancel={[Function]}
  onOk={[Function]}
  placeholder="请选择"
  prefixCls="za-picker"
  title="请选择"
  validate={[Function]}
  value={Array []}
  valueMember="value"
>
  <div
    className="za-picker"
  >
    <div
      className="za-picker-input za-picker-placeholder"
      onClick={[Function]}
    >
      <input
        type="hidden"
        value={Array []}
      />
      请选择
    </div>
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  请选择
                </div>
                <div
                  className="za-picker-submit"
                />
              </div>
              <div
                className="za-picker-crumbs"
              >
                <p>
                  选择：
                </p>
              </div>
              <div
                className="za-picker-stack-group"
              >
                <div
                  className="za-picker-stack-column lower-hidden"
                  key="0"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-column-wrapper"
                    onClick={[Function]}
                  >
                    <div
                      className="za-picker-stack-item"
                      key="0"
                      onClick={[Function]}
                    >
                      北京市
                    </div>
                    <div
                      className="za-picker-stack-item"
                      key="1"
                      onClick={[Function]}
                    >
                      上海市
                    </div>
                  </div>
                </div>
                <div
                  className="za-picker-stack-column lower-hidden"
                  key="1"
                  onClick={[Function]}
                >
                  <div
                    className="za-picker-stack-column-wrapper"
                    onClick={[Function]}
                  >
                    <div
                      className="za-picker-stack-item"
                      key="0"
                      onClick={[Function]}
                    >
                      海淀区
                    </div>
                    <div
                      className="za-picker-stack-item"
                      key="1"
                      onClick={[Function]}
                    >
                      西城区
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</PickerStack>
`;
